# demo-app

./: .env  README.md
.github/: PULL_REQUEST_TEMPLATE.md
server/: .env.example  .gitignore  Makefile  compose.yaml  pyproject.toml
server/.docker/local/mysql/: Dockerfile  my.cnf
server/.docker/local/python/: Dockerfile
server/app/: main.py
server/app/database/migrations/: alembic.ini  env.py
server/app/database/migrations/versions/: 14121785768f_create_user_table.py  14eae52b4e31_create_post_table.py  cf2a0a98fe1f_create_posts_table.py
server/app/handlers/: debug.py  post.py
server/app/libraries/repositories/: post.py
server/app/libraries/usecases/: post.py
server/app/models/: post.py
server/app/settings/: database.py  env.py  middleware.py  route.py
